# binlink

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: cfg.rs  cfgreader.rs  cli.rs  dl.rs  execv.rs  main.rs
