[package]
name = "binlink"
version = "0.1.0"
authors = ["Pavel Shirshov <pshirshov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking", "gzip", "brotli"] }
indicatif = "0.15.0"

failure = "0.1.8"
exitfailure = "0.5.1"

which = "4.0.2"
dirs = "3.0.1"

libc = "0.2"

serde = { version = "1.0.116", features = ["derive"] }
toml = "0.5.6"
#serde_yaml = "0.8"
#serde_any = { version = "0.5", default-features = false, features = ["yaml", "toml"] }
toml_edit = "0.2.0"

clap = "3.0.0-beta.2"

log = "0.4.11"
env_logger = "0.7.1"

#async-std = {version = "1.6.4", features = ["attributes"] }
#futures-util = "0.3.5"
#tokio = { version = "0.2.22", features = ["fs", "rt-threaded"] }